# HELM

./: .gitignore  .helm_profile.json  Makefile  README.md  ReadMe.md  kv_cache.py  llm_iree_cached.py  llm_iree_run.py  pyproject.toml  simple_iree_run.py  turbine_inference_demo.py  verify_iree.py
backend/: backend.py
backend/passes/: __init__.py  common.py  cost_model.py  data_analysis.py  device_placement.py  flops_analysis.py  hardware_analysis.py  heuristic.py  parallelism.py  topology.py  (+1 more)
benchmarks/: README.md  benchmark.py  benchmark_accelerate.py  benchmark_compile.py  benchmark_eager.py  benchmark_results.json  benchmark_vllm.py  plot_comparison.py  pyproject.toml  run_benchmark.py  single_gpu.py
examples/: README.md  analyze_qwen.py  cost_model_sweep.py  run_qwen_inference.py
experiments/: run_paper_experiments.sh
helm/: README.md  __init__.py  checkpoint_loader.py  compiler.py  graph.py
models/: four_stage_model.py  llama_loader.py  qwen_loader.py  toy_model.py
paper/: main.tex
runner/: benchmark_throughput.py  compare_backends.py  compile_llama.py  compile_qwen.py  main.py  run_distributed.py  run_pipeline_parallel.py  run_toy.py  test_distributed_passes.py  verify_dist_infrastructure.py
runtime/: dist_runtime.py  ray_runtime.py
tests/: README.md  test_backend.py  test_cost_model.py  test_dp_mapping.py  test_dynamic_shapes.py  test_helm_backend_sanity.py  test_optimizer.py  test_parallelism.py  test_quantization.py  test_tensor_parallelism.py  test_tp_extensions.py  visualize_lowering.py  visualize_passes.py
visuals/: visualize_graph.py
(+45 files in other folders)
