[project]
name = "helm"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.12.0",
    "safetensors>=0.7.0",
    "sentencepiece>=0.2.1",
    "torch>=2.9.1",
    "transformers>=4.57.3",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["helm"]
