[project]
name = "hetero"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate",
    "bitsandbytes>=0.49.1",
    "graphviz",
    "numpy",
    "ray",
    "torch",
    "torchvision",
    "transformers",
    "vllm>=0.14.1",
]
